syntax = "proto3";
package zeta.market;

import "gogoproto/gogo.proto";
import "market/params.proto";
import "market/item.proto";
import "market/sell_order.proto";
import "market/buy_order.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "zeta/x/market/types";

// GenesisState defines the market module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  string port_id = 2;
  repeated Item itemList = 3 [(gogoproto.nullable) = false];
  repeated SellOrder sellOrderList = 4 [(gogoproto.nullable) = false];
  repeated BuyOrder buyOrderList = 8 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
  uint64 nextItemId = 5;
  uint64 nextSellOrderId = 6;
  uint64 nextBuyOrderId = 7;
}
