syntax = "proto3";
package zeta.market;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "zeta/x/market/types";

// Msg defines the Msg service.
service Msg {
      rpc PrepareItem(MsgPrepareItem) returns (MsgPrepareItemResponse);
  rpc RemoveItem(MsgRemoveItem) returns (MsgRemoveItemResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgPrepareItem {
  string creator = 1;
  string title = 2;
  string desciption = 3;
  string externalLink = 4;
  uint64 sellerId = 5;
}

message MsgPrepareItemResponse {
  uint64 itemId = 1;
}

message MsgRemoveItem {
  string creator = 1;
  uint64 itemId = 2;
  uint64 sellerId = 3;
}

message MsgRemoveItemResponse {
}

// this line is used by starport scaffolding # proto/tx/message
